# tiralabra

./: .coverage  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittely.md  testaus.md  toteutus.md
src/: dict_sanarakenne.py  konfiguraatio.py  main.py  markov.py  sanarakenne.py  tiedostonkasittely.py  tiedostonkasittely_text.py  trie.py  ui_komennot.py
src/data/telegram/: tiralabra.json
src/data/text/: kokoomus.txt  vihr_ohjelma.txt
src/tests/: __init__.py  dict_sanarakenne_test.py  markov_test.py  sanarakenne_test.py  tiedostonkasittely_test.py  trie_test.py
viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
