[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["MyVeli <veli.myllyla@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.6.0"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
